clusters/beryjuio-prod/minio/imagik-deployment.yaml
# prettier-ignore
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: imagik
  name: imagik
  namespace: minio
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: imagik
  template:
    metadata:
      annotations:
        proxy.istio.io/config: |
          holdApplicationUntilProxyStarts: true
      labels:
        app.kubernetes.io/name: imagik
    spec:
      containers:
      - command:
        - /imagik
        - -c=/config.yml
        image: ghcr.io/beryju/imagik:latest-1790935283-85e0aadaa04e6bd6e0a7bdddfc3757d86eb2ed40 # {"$imagepolicy": "flux-system:imagik"}
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /api/pub/health/liveness
            port: http
            scheme: HTTP
        name: imagik
        ports:
        - containerPort: 8000
          name: http
          protocol: TCP
        - containerPort: 9300
          name: http-metrics
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /api/pub/health/readiness
            port: http
            scheme: HTTP
          failureThreshold: 20
          successThreshold: 1
          initialDelaySeconds: 10
        resources:
          limits:
            cpu: 500m
            memory: 500M
          requests:
            cpu: 10m
            memory: 150M
