clusters/beryjuio-prod/minio/minio-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: minio
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: minio
  template:
    metadata:
      annotations:
        # minio is required for the registry to work, but to start it needs the istio sidecar
        # ...which by default comes from the registry. Hence we use the upstream dockerhub image
        # here
        sidecar.istio.io/proxyImage: docker.io/istio/proxyv2:1.31.1
        proxy.istio.io/config: |
          holdApplicationUntilProxyStarts: true
      labels:
        app.kubernetes.io/name: minio
    spec:
      containers:
        - args:
            - server
            - --console-address=:9001
            - /storage
          image: docker.io/pgsty/silo:RELEASE.2026-09-16T00-00-00Z
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /minio/health/live
              port: 9000
              scheme: HTTP
            periodSeconds: 20
            successThreshold: 1
            timeoutSeconds: 1
            initialDelaySeconds: 30
          name: minio
          ports:
            - containerPort: 9000
              name: http
              protocol: TCP
            - containerPort: 9001
              name: http-console
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /minio/health/ready
              port: 9000
              scheme: HTTP
            periodSeconds: 20
            successThreshold: 1
            timeoutSeconds: 1
            initialDelaySeconds: 30
          resources: {}
          volumeMounts:
            - mountPath: /storage
              name: storage
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: minio-pvc
