clusters/beryjuio-prod/minio/imagik-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: imagik
  name: imagik
  namespace: imagik
spec:
  ports:
    - name: http
      port: 8000
      protocol: TCP
      targetPort: 8000
    - name: http-metrics
      port: 9300
      protocol: TCP
      targetPort: 9300
  selector:
    app.kubernetes.io/name: imagik
  type: ClusterIP
