clusters/beryjuio-prod/minio/minio-ingress.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: beryju-io-gw-minio
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: beryju-io-minio
      hosts:
        - s3.beryju.io
        - "*.s3.beryju.io"
        - s3.beryju.org
        - "*.s3.beryju.org"
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - s3.beryju.io
        - "*.s3.beryju.io"
        - s3.beryju.org
        - "*.s3.beryju.org"
      tls:
        httpsRedirect: true
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: beryju-io-vs-minio
  namespace: istio-system
spec:
  gateways:
    - beryju-io-gw-minio
  hosts:
    - s3.beryju.io
    - "*.s3.beryju.io"
    - s3.beryju.org
    - "*.s3.beryju.org"
  http:
    - match:
        - headers:
            host:
              exact: console.s3.beryju.io
      route:
        - destination:
            host: minio-prd.minio.svc.cluster.local
            port:
              number: 9001
          weight: 100
    - match:
        - headers:
            host:
              regex: '.*\.?s3\.beryju\.io'
        - headers:
            host:
              regex: '.*\.?s3\.beryju\.org'
      route:
        - destination:
            host: minio-prd.minio.svc.cluster.local
            port:
              number: 9000
          headers:
            response:
              set:
                server: "NetApp CSS/9.8P4"
          weight: 100
